Encoder script changes